fixed item_show layout issue issue posted in server repo https://github.com/maxlath/inventaire/issues/26

--- a/app/modules/inventory/scss/_item_show.scss
+++ b/app/modules/inventory/scss/_item_show.scss
@@ -1,6 +1,7 @@
 #itemShowLayout{
   margin-bottom: 2em;
   #picture{
+    @include flex(0, 0);
     /*Large screens*/
     @media screen and (min-width: $smallscreen) {
       padding-top: 2em;
